--- a/public/css/user/user.scss
+++ b/public/css/user/user.scss
@@ -13,7 +13,7 @@
     }
 
     .info {
-        padding: 1em 2em;
+        padding: 1em;
 
         img {
             position: absolute;
@@ -93,6 +93,23 @@
     }
 }
 
+.tab-list {
+    display: flex;
+
+    .tab {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        cursor: pointer;
+        background: rgba(0, 0, 0, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+
+        &:hover {
+            background: rgba(255, 255, 255, 0.1);
+        }
+    }
+}
+
 body.light {
     .info {
         .time {
@@ -125,6 +142,10 @@ body.light {
                 }
             }
         }
+    }
+
+    .tab-list {
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     }
 }
 
@@ -163,14 +184,16 @@ body.dark {
             }
         }
     }
+
+    .tab-list {
+        box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
+    }
 }
 
 @media screen and (max-width: 900px) {
     .top {
     
         .info {
-            padding: 1em;
-    
             img {
                 width: 20vh;
                 height: 20vh;
