--- a/public/css/settings/settings.css
+++ b/public/css/settings/settings.css
@@ -20,6 +20,10 @@
   font-size: .9em;
 }
 
+.theme-box #theme-state span {
+  text-transform: uppercase;
+}
+
 .theme-box #switch-theme-btn {
   cursor: pointer;
   position: relative;
@@ -115,6 +119,7 @@
   padding: 2em 1em;
   margin-top: -1.2em;
   border-radius: 0 0 1em 1em;
+  position: relative;
 }
 
 #container .settings .form-manage.open form {
@@ -152,8 +157,22 @@
   margin-bottom: 1em;
   padding: 1em;
   width: 100%;
+  height: 150px;
   border-radius: 1em;
+  font-size: .9em;
+}
+
+#container .settings .form-manage.open textarea + label {
+  position: absolute;
+  right: 2em;
+  bottom: 9em;
+  text-align: right;
+  color: white;
+  width: auto;
+  padding: 2px 5px;
   font-size: .8em;
+  border-radius: 1em;
+  background: rgba(0, 0, 0, 0.4);
 }
 
 #container .settings .form-manage.open input[type="submit"] {
@@ -312,8 +331,11 @@ body.dark #switch-theme-btn .slider {
   }
   #container .settings .form-manage.open textarea {
     width: 100%;
-    font-size: 1.1em;
-    margin-bottom: 2em;
+    font-size: .9em;
+    height: 200px;
+  }
+  #container .settings .form-manage.open textarea + label {
+    bottom: 11em;
   }
   #container .settings .form-manage.open .show-password {
     width: 100%;
