--- a/public/css/home/grid/grid.css
+++ b/public/css/home/grid/grid.css
@@ -45,6 +45,53 @@
   background: #555;
 }
 
+.post-input {
+  margin: 1em;
+}
+
+.post-input h2 {
+  font-size: 1.8em;
+}
+
+.post-input form {
+  position: relative;
+}
+
+.post-input form textarea {
+  resize: none;
+  outline: none;
+  border: none;
+  border-radius: 1em;
+  padding: 1em;
+  font-size: 1em;
+  height: 200px;
+  width: 100%;
+  margin: 1em 0;
+}
+
+.post-input form textarea + label {
+  position: absolute;
+  right: 1em;
+  bottom: 6em;
+  text-align: right;
+  color: white;
+  width: auto;
+  padding: 2px 5px;
+  font-size: 1em;
+  border-radius: 1em;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.post-input form input {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px 15px;
+  font-size: 1.2em;
+  border-radius: .5em;
+  font-weight: 500;
+}
+
 #message-section {
   position: fixed;
   right: 0;
@@ -177,6 +224,22 @@ body.light #message-btn {
           box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
 }
 
+body.light .post-input form textarea {
+  border: 2px solid #25252581;
+}
+
+body.light .post-input form input {
+  border: 2px solid #25252581;
+  color: #252525;
+}
+
+body.light .post-input form input:hover {
+  background: #252525e5;
+  color: #dbdbdb;
+  -webkit-transition: 200ms;
+  transition: 200ms;
+}
+
 body.dark #container {
   -webkit-box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.1);
           box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.1);
@@ -226,15 +289,12 @@ body.dark #message-btn {
           box-shadow: 0px -5px 5px rgba(134, 134, 134, 0.1);
 }
 
+body.dark .post-input form input {
+  background: #1e1e30;
+  color: #d8d8d8;
+}
+
 @media screen and (max-width: 900px) {
-  #container {
-    margin: 0;
-    padding-top: 4em;
-  }
-  #container h1 {
-    margin-top: 1em;
-    font-size: 1em;
-  }
   #tool-bar {
     width: 100vw;
     height: 5em;
@@ -282,6 +342,21 @@ body.dark #message-btn {
   }
   #tool-bar .buttons .btn:not(:last-child) {
     margin-right: 10px;
+  }
+  #container {
+    margin: 0;
+    padding-top: 4em;
+  }
+  #container h1 {
+    margin-top: 1em;
+    font-size: 1em;
+  }
+  .post-input form textarea {
+    font-size: .9em;
+  }
+  .post-input form input {
+    width: 100%;
+    font-size: .8em;
   }
   #message-section {
     width: 100vw;
