--- a/public/css/home/grid/grid.scss
+++ b/public/css/home/grid/grid.scss
@@ -46,6 +46,53 @@
     }
 }
 
+.post-input {
+    margin: 1em;
+
+    h2 {
+        font-size: 1.8em;
+    }
+
+    form {
+        position: relative;
+
+        textarea {
+            resize: none;
+            outline: none;
+            border: none;
+            border-radius: 1em;
+            padding: 1em;
+            font-size: 1em;
+            height: 200px;
+            width: 100%;
+            margin: 1em 0;
+
+            & + label {
+                position: absolute;
+                right: 1em;
+                bottom: 6em;
+                text-align: right;
+                color: rgb(255, 255, 255);
+                width: auto;
+                padding: 2px 5px;
+                font-size: 1em;
+                border-radius: 1em;
+                background: rgba(0, 0, 0, 0.4);
+            }
+        }
+
+        input {
+            outline: none;
+            border: none;
+            cursor: pointer;
+            padding: 10px 15px;
+            font-size: 1.2em;
+            border-radius: .5em;
+            font-weight: 500;
+        }
+    }
+}
+
 #message-section {
     position: fixed;
     right: 0;
@@ -167,6 +214,26 @@ body.light {
     #message-btn {
         box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
     }
+
+    .post-input {
+        form {
+    
+            textarea {
+                border: 2px solid #25252581;
+            }
+    
+            input {
+                border: 2px solid #25252581;
+                color: #252525;
+
+                &:hover {
+                    background: #252525e5;
+                    color: #dbdbdb;
+                    transition: 200ms;
+                }
+            }
+        }
+    }
 }
 
 body.dark {
@@ -214,19 +281,18 @@ body.dark {
     #message-btn {
         box-shadow: 0px -5px 5px rgba(134, 134, 134, 0.1);
     }
+
+    .post-input {
+        form {    
+            input {
+                background: #1e1e30;
+                color: #d8d8d8;
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 900px) { 
-    #container  {
-        margin: 0;
-        padding-top: 4em;
-
-        h1 {
-            margin-top: 1em;
-            font-size: 1em;
-        }
-    }
-
     #tool-bar {
         width: 100vw;
         height: 5em;
@@ -265,6 +331,29 @@ body.dark {
                 &:not(:last-child) {
                     margin-right: 10px;
                 }
+            }
+        }
+    }
+
+    #container  {
+        margin: 0;
+        padding-top: 4em;
+
+        h1 {
+            margin-top: 1em;
+            font-size: 1em;
+        }
+    }
+
+    .post-input {
+        form {
+            textarea {
+                font-size: .9em;
+            }
+
+            input {
+                width: 100%;
+                font-size: .8em;
             }
         }
     }
