following and followers pages

--- a/public/css/followers/followers.css
+++ b/public/css/followers/followers.css
@@ -17,7 +17,6 @@
 
 .top a {
   font-size: 1.1em;
-  color: white;
   word-break: break-all;
 }
 
@@ -32,7 +31,6 @@
   text-align: center;
   padding: 10px;
   cursor: pointer;
-  background: rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -46,5 +44,23 @@
   border-radius: 1em;
   height: 4px;
   margin: auto;
+}
+
+body.light .top a {
+  color: #252525;
+}
+
+body.light .tab-list .tab {
+  color: #252525;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+body.dark .top a {
+  color: #EDEDED;
+}
+
+body.dark .tab-list .tab {
+  color: #EDEDED;
+  border: 2px solid rgba(255, 255, 255, 0.1);
 }
 /*# sourceMappingURL=followers.css.map */
