--- a/public/css/home/grid/grid.css
+++ b/public/css/home/grid/grid.css
@@ -47,6 +47,8 @@
 
 .post-input {
   margin: 1em;
+  border-radius: 1em;
+  padding: 1em;
 }
 
 .post-input h2 {
@@ -67,6 +69,7 @@
   height: 200px;
   width: 100%;
   margin: 1em 0;
+  font-weight: 500;
 }
 
 .post-input form textarea + label {
@@ -174,20 +177,17 @@
 }
 
 body.light #container {
-  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 body.light #tool-bar {
   background: #EDEDED;
-  -webkit-box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
+  border: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 body.light #tool-bar .btn {
   color: #0D0D1A;
-  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 body.light #tool-bar .btn:hover {
@@ -198,14 +198,12 @@ body.light #tool-bar .btn:hover {
 
 body.light #message-section {
   background: linear-gradient(45deg, #EDEDED, #dbdbdb);
-  -webkit-box-shadow: 0 10px 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 10px 5px rgba(0, 0, 0, 0.1);
+  border: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 body.light #message-section .talk {
   color: #0D0D1A;
-  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 body.light #message-section .talk:hover {
@@ -222,6 +220,11 @@ body.light #message-section.message-section-open::-webkit-scrollbar-track {
 body.light #message-btn {
   -webkit-box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
           box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
+}
+
+body.light .post-input {
+  background: #EDEDED;
+  border: 4px solid rgba(0, 0, 0, 0.1);
 }
 
 body.light .post-input form textarea {
@@ -241,8 +244,7 @@ body.light .post-input form input:hover {
 }
 
 body.dark #container {
-  -webkit-box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.1);
-          box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.1);
+  border: 2px solid rgba(255, 255, 255, 0.1);
 }
 
 body.dark #tool-bar {
@@ -253,8 +255,7 @@ body.dark #tool-bar {
 
 body.dark #tool-bar .btn {
   color: #EDEDED;
-  -webkit-box-shadow: 0px 0px 5px rgba(134, 134, 134, 0.1);
-          box-shadow: 0px 0px 5px rgba(134, 134, 134, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 body.dark #tool-bar .btn:hover {
@@ -264,14 +265,12 @@ body.dark #tool-bar .btn:hover {
 
 body.dark #message-section {
   background: #0D0D1A;
-  -webkit-box-shadow: 0px 0px 5px rgba(134, 134, 134, 0.1);
-          box-shadow: 0px 0px 5px rgba(134, 134, 134, 0.1);
+  border: 2px solid rgba(255, 255, 255, 0.1);
 }
 
 body.dark #message-section .talk {
   color: #EDEDED;
-  -webkit-box-shadow: 0px 0px 5px rgba(134, 134, 134, 0.1);
-          box-shadow: 0px 0px 5px rgba(134, 134, 134, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 body.dark #message-section .talk:hover {
@@ -287,6 +286,11 @@ body.dark #message-section.message-section-open::-webkit-scrollbar-track {
 body.dark #message-btn {
   -webkit-box-shadow: 0px -5px 5px rgba(134, 134, 134, 0.1);
           box-shadow: 0px -5px 5px rgba(134, 134, 134, 0.1);
+}
+
+body.dark .post-input {
+  background: #0d0d1a;
+  border: 4px solid rgba(255, 255, 255, 0.1);
 }
 
 body.dark .post-input form input {
