bd integrity improvement
No follow/unfollow button show correct text, and numbers go up and down + security to only one relation followed-followed in the table + IF statement in query

--- a/public/css/user/user.css
+++ b/public/css/user/user.css
@@ -99,6 +99,7 @@
   border-radius: .5em;
   cursor: pointer;
   font-weight: 500;
+  text-transform: capitalize;
 }
 
 .top .info .bottom-bar .right .btn:not(:last-child) {
