--- a/public/css/user/user.scss
+++ b/public/css/user/user.scss
@@ -85,6 +85,7 @@
                     border-radius: .5em;
                     cursor: pointer;
                     font-weight: 500;
+                    text-transform: capitalize;
 
                     &:not(:last-child) {
                         margin-right: 10px;
