--- a/public/css/home/feed/feed.scss
+++ b/public/css/home/feed/feed.scss
@@ -133,6 +133,20 @@ body.dark {
     }
 }
 
+// !!!!!!!!!!!!!!!!
+
+#images-preview {
+    display: flex;
+    margin-bottom: 1em;
+    flex-wrap: wrap;
+
+    img {
+        width: 50%;
+        border: 2px solid rgba(255, 255, 255, 0.2);
+        border-radius: 5%;
+    }
+}
+
 @media screen and (max-width: 900px) {
     #feed {
         padding: 1em;
