--- a/public/css/home/grid/grid.scss
+++ b/public/css/home/grid/grid.scss
@@ -73,7 +73,7 @@
             & + label {
                 position: absolute;
                 right: 1em;
-                bottom: 6em;
+                top: 10em;
                 text-align: right;
                 color: rgb(255, 255, 255);
                 width: auto;
