--- a/public/css/followers/followers.scss
+++ b/public/css/followers/followers.scss
@@ -13,6 +13,10 @@
     a {
         font-size: 1.1em;
         word-break: break-all;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
@@ -53,6 +57,39 @@ body.light {
             border: 2px solid rgba(0, 0, 0, 0.1);
         }   
     }
+
+    .user-box {
+        background: #EDEDED;
+        border: 4px solid rgba(0, 0, 0, 0.1);
+
+        .box-top {
+            .info {
+                a {
+                    color: #EDEDED; 
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+            }
+    
+            .btn {
+                border: 1px solid black;
+
+                &:hover {
+                    background: rgba(0, 0, 0, 0.1);
+                }
+            }
+        }
+    
+        .btn-responsive {
+            border: 1px solid black;
+
+            &:hover {
+                background: rgba(0, 0, 0, 0.1);
+            }
+        }
+    }
 }
 
 body.dark {
@@ -67,5 +104,155 @@ body.dark {
             color: #EDEDED;
             border: 2px solid rgba(255, 255, 255, 0.1);
         }   
+    }
+
+    .user-box {
+        background: #0d0d1a;
+        border: 4px solid rgba(255, 255, 255, 0.1);
+
+        .box-top {
+            .info {
+                a {
+                    color: #EDEDED; 
+                }
+            }
+    
+            .btn {
+                border: 1px solid silver;
+
+                &:hover {
+                    background: rgba(255, 255, 255, 0.1);
+                }
+            }
+        }
+    
+        .btn-responsive {
+            border: 1px solid silver;
+
+            &:hover {
+                background: rgba(255, 255, 255, 0.1);
+            }
+        }
+    }
+}
+
+#feed {
+    padding: 1em;
+}
+
+.user-box {
+    padding: 1em;
+    border-radius: 8px;
+
+    .box-top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .info {
+            display: flex;
+            align-items: center;
+
+            img {
+                width: 60px;
+                height: 60px;
+                border-radius: 90%;
+                margin-right: 15px;
+            }
+
+            a {
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+
+        .btn {
+            font-size: .9em;
+            cursor: pointer;
+            padding: 10px 15px;
+            border-radius: 8px;
+        }
+    }
+
+    .box-date {
+        margin: 1em 0;
+        font-size: .8em;
+    }
+
+    .box-about {
+        word-break: break-all;
+        font-size: .9em;
+    }
+
+    .btn-responsive {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .top {    
+        img {
+            width: 40px;
+            height: 40px;
+            margin-right: 10px;
+        }
+    
+        a {
+            font-size: .8em;
+        }
+    }
+    
+    .tab-list { 
+        .tab {
+            padding: 10px;
+            font-size: .8em;
+        }
+    
+        .tab .underline {
+            width: 60%; 
+            border-radius: 1em;
+            height: 4px; 
+            margin: auto;
+        }
+    }
+}
+
+@media screen and (max-width: 500px)  {
+    .user-box {
+        .box-top {
+            .info {      
+                font-size: .8em; 
+
+                img {
+                    width: 50px;
+                    height: 50px;
+                    margin-right: 10px;
+                }
+            }
+
+            .btn {
+                display: none;
+            }
+        }
+
+        .box-date {
+            font-size: .7em;
+        }
+
+        .box-about {
+            font-size: .7em;
+        }
+
+        .btn-responsive {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            text-align: center;
+            border-radius: 8px;
+            margin: 1em 0;
+            font-size: .7em;
+            cursor: pointer;
+        }
     }
 }
