--- a/public/css/followers/followers.css
+++ b/public/css/followers/followers.css
@@ -62,6 +62,7 @@ body.light .tab-list .tab {
 body.light .user-box {
   background: #EDEDED;
   border: 4px solid rgba(0, 0, 0, 0.1);
+  margin-top: 0.5em;
 }
 
 body.light .user-box .box-top .info a {
@@ -70,6 +71,10 @@ body.light .user-box .box-top .info a {
 
 body.light .user-box .box-top .info a:hover {
   text-decoration: underline;
+}
+
+body.light .user-box .box-top a:link, body.light .user-box .box-top a:visited {
+  color: #EDEDED;
 }
 
 body.light .user-box .box-top .btn {
@@ -100,9 +105,14 @@ body.dark .tab-list .tab {
 body.dark .user-box {
   background: #0d0d1a;
   border: 4px solid rgba(255, 255, 255, 0.1);
+  margin-top: 0.5em;
 }
 
 body.dark .user-box .box-top .info a {
+  color: #EDEDED;
+}
+
+body.dark .user-box .box-top a:link, body.dark .user-box .box-top a:visited {
   color: #EDEDED;
 }
 
