--- a/public/css/home/grid/grid.css
+++ b/public/css/home/grid/grid.css
@@ -79,10 +79,29 @@
   text-align: right;
   color: white;
   width: auto;
-  padding: 2px 5px;
+  padding: 5px 5px;
   font-size: 1em;
   border-radius: 1em;
   background: rgba(0, 0, 0, 0.4);
+}
+
+.post-input form #uploadfile-label {
+  position: absolute;
+  left: 1em;
+  top: 10em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 90%;
+  cursor: pointer;
 }
 
 .post-input form input {
@@ -231,6 +250,11 @@ body.light .post-input form textarea {
   border: 2px solid #25252581;
 }
 
+body.light .post-input form #uploadfile-label {
+  color: #494949;
+  border: 2px solid #494949;
+}
+
 body.light .post-input form input {
   border: 2px solid #25252581;
   color: #252525;
@@ -291,6 +315,16 @@ body.dark #message-btn {
 body.dark .post-input {
   background: #0d0d1a;
   border: 4px solid rgba(255, 255, 255, 0.1);
+}
+
+body.dark .post-input form textarea {
+  background: #1e1e2d;
+  color: #d6d6d6;
+}
+
+body.dark .post-input form #uploadfile-label {
+  color: #d6d6d6;
+  border: 2px solid #d6d6d686;
 }
 
 body.dark .post-input form input {
