--- a/public/css/home/grid/grid.scss
+++ b/public/css/home/grid/grid.scss
@@ -77,11 +77,24 @@
                 text-align: right;
                 color: rgb(255, 255, 255);
                 width: auto;
-                padding: 2px 5px;
+                padding: 5px 5px;
                 font-size: 1em;
                 border-radius: 1em;
                 background: rgba(0, 0, 0, 0.4);
             }
+        }
+
+        #uploadfile-label {
+            position: absolute;
+            left: 1em;
+            top: 10em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 35px;
+            height: 35px;
+            border-radius: 90%;
+            cursor: pointer;
         }
 
         input {
@@ -226,6 +239,11 @@ body.light {
             textarea {
                 border: 2px solid #25252581;
             }
+
+            #uploadfile-label {
+                color: #494949;
+                border: 2px solid #494949;
+            }
     
             input {
                 border: 2px solid #25252581;
@@ -292,6 +310,16 @@ body.dark {
         border: 4px solid rgba(255, 255, 255, 0.1); 
         
         form {    
+            textarea {
+                background: #1e1e2d;
+                color: #d6d6d6;
+            }
+
+            #uploadfile-label {
+                color: #d6d6d6;
+                border: 2px solid #d6d6d686;
+            }
+
             input {
                 background: #1e1e30;
                 color: #d8d8d8;
