--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,24 @@ body {
   position: relative;
 }
 
+#loading-div {
+  background-color: rgba(71, 71, 71, 0.438);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 999;
+}
+
+#loading-gif {
+  image-rendering: -moz-crisp-edges;
+  width: 10%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
 .logo {
   font-size: 4em;
   max-width: 280px;
