--- a/public/css/home/feed/feed.css
+++ b/public/css/home/feed/feed.css
@@ -184,6 +184,12 @@ body.dark #feed .post .bottom-post .list .tab:hover {
   border-radius: 5%;
 }
 
+#images-preview video {
+  width: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 5%;
+}
+
 @media screen and (max-width: 900px) {
   #feed {
     padding: 1em;
