--- a/public/css/home/feed/feed.scss
+++ b/public/css/home/feed/feed.scss
@@ -148,6 +148,7 @@ body.dark {
             border: 4px solid rgba(255, 255, 255, 0.1);
     
             .interative-form.open {
+                z-index: 99;
                 .btn-form {
                     background: #272525;
                     color: #EDEDED;
