--- a/public/css/settings/settings.css
+++ b/public/css/settings/settings.css
@@ -287,6 +287,13 @@ body.dark #container .settings .form-manage.open {
           box-shadow: 0 2px 5px rgba(255, 255, 255, 0.151);
 }
 
+body.dark #container .settings .form-manage.open textarea {
+  color: white;
+  background: #1e1e30;
+  -webkit-box-shadow: 0 2px 5px rgba(255, 255, 255, 0.151);
+          box-shadow: 0 2px 5px rgba(255, 255, 255, 0.151);
+}
+
 body.dark #container .settings #block-manage.open .block {
   background: #1e1e30;
 }
