--- a/public/css/home/feed/feed.scss
+++ b/public/css/home/feed/feed.scss
@@ -142,6 +142,10 @@ body.light {
                             color: #9233ff;
                         }
                     }
+                    .my-like {
+                        background: rgba(0, 0, 0, 0.1);
+                        color: #9233ff;
+                    }
                 }
             }
         }
@@ -191,6 +195,10 @@ body.dark {
                             color: #b97bff;
                             transition: 200ms;
                         }
+                    }
+                    .my-like {
+                        background: rgba(255, 255, 255, 0.1); 
+                        color: #b97bff;
                     }
                 }
             }
